--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,12 @@
 
 
 # ----------------------------------------------------------------------
+# 301 Redirects
+# ----------------------------------------------------------------------
+
+#Redirect 301 /page.html http://www.destination.co.uk/page.html
+
+# ----------------------------------------------------------------------
 # Better website experience for IE users
 # ----------------------------------------------------------------------
 
@@ -334,11 +340,15 @@ FileETag None
 
 <IfModule mod_rewrite.c>
   Options +FollowSymlinks
-# Options +SymLinksIfOwnerMatch
   RewriteEngine On
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteRule ^events(.*)\.html$ index.php
+# RewriteCond $0 !^index\.html($|/)
+# RewriteRule ^([^.]+)\.html$ $1.php
 # RewriteBase /
-# RewriteRule  ^renamed.html$  ridiculouslylonghtml.html
-# RewriteRule  ^renamed/?$  ridiculouslylonghtml.html [NC]
+# RewriteRule ^renamed.html$  ridiculouslylonghtml.html
+# RewriteRule ^renamed/?$  ridiculouslylonghtml.html [NC]
 </IfModule>
 
 
